--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -600,30 +600,101 @@ p:first-line
     flex 1
     display flex
     align-items stretch
+    margin 0 -.5rem
 .Forecast__day
     flex 1
     display flex
     flex-direction column
-    align-items center
+    align-items stretch
+    padding 1rem 1rem 0
 
-.EnergyBars
+.Forecast__dayData
     flex 1 0 auto
     display flex
+    flex-direction column
     align-items stretch
 
-.EnergyBar
-    margin 1rem .5rem
-    display flex
-    flex-direction column
-.EnergyBar__line
-    flex 1
-    width 2rem
-    border-top 1px solid $colorDim
-.EnergyBar__line--low
-    @extend .EnergyBar__line
-    border-top 1px solid $colorTitle
+.RadialDanger
+    width 100%
+    fill transparent
+    margin-bottom 1rem
+
+$RadialDanger__fill
+    stroke-width 1px
+    vector-effect non-scaling-stroke
+
+.RadialDanger__base
+    @extend $RadialDanger__fill
+    stroke $colorDim
+.RadialDanger__base--initial
+    @extend .RadialDanger__base
+    fill black
+
+.RadialDanger__geomagnetic
+    @extend $RadialDanger__fill
+    stroke $colorGeomagnetic
+    fill alpha($colorGeomagnetic, .05)
+
+.RadialDanger__solar
+    @extend $RadialDanger__fill
+    stroke $colorSolar
+    fill alpha($colorSolar, .05)
+
+.RadialDanger__blackout
+    @extend $RadialDanger__fill
+    stroke $colorBlackout
+    fill alpha($colorBlackout, .05)
+
+.RadialDanger__divider
+    vector-effect non-scaling-stroke
+    stroke-width 1px
+    stroke black
 
 .Forecast__dayLabel
     text-transform uppercase
+    font-size 1.25rem
     flex 0 0 auto
-    text-align center
+    margin-bottom 1rem
+    text-align left
+    color $colorHighlight
+
+.Forecast__stats
+    margin-bottom .5rem
+    padding .5rem 1rem
+    display flex
+    align-items center
+    background-color alpha($colorDim, 0.1)
+    border-radius .125rem
+
+.Forecast__statsLabel
+    flex 1
+    margin-right 1rem
+    text-transform uppercase
+    font-size .875rem
+
+.Forecast__statsValue
+    flex 0 0 30%
+    font-size 1.5rem
+    text-align right
+
+.Forecast__statsLabel--geomagnetic
+.Forecast__statsLabel--solar
+.Forecast__statsLabel--blackout
+    @extend .Forecast__statsLabel
+
+.Forecast__statsValue--geomagnetic
+.Forecast__statsValue--solar
+.Forecast__statsValue--blackout
+    @extend .Forecast__statsValue
+
+.Forecast__statsLabel--geomagnetic
+.Forecast__statsValue--geomagnetic
+    color $colorGeomagnetic
+
+.Forecast__statsLabel--solar
+.Forecast__statsValue--solar
+    color $colorSolar
+
+.Forecast__statsLabel--blackout
+.Forecast__statsValue--blackout
+    color $colorBlackout
