max min geomagnetic activity

--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -144,7 +144,7 @@ block content
                                             circle.RadialDanger__base(cx="50", cy="50", r="50")
                                     .Forecast__stats
                                         .Forecast__statsLabel--geomagnetic Geomagnetic Activity
-                                        .Forecast__statsValue--geomagnetic 2
+                                        .Forecast__statsValue--geomagnetic 8 / 2
                                     .Forecast__stats
                                         .Forecast__statsLabel--solar Solar Radiation Activity
                                         .Forecast__statsValue--solar 5%
@@ -173,7 +173,7 @@ block content
                                             circle.RadialDanger__base(cx="50", cy="50", r="50")
                                     .Forecast__stats
                                         .Forecast__statsLabel--geomagnetic Geomagnetic Activity
-                                        .Forecast__statsValue--geomagnetic 2
+                                        .Forecast__statsValue--geomagnetic 2 / 2
                                     .Forecast__stats
                                         .Forecast__statsLabel--solar Solar Radiation Activity
                                         .Forecast__statsValue--solar 5%
@@ -202,7 +202,7 @@ block content
                                             circle.RadialDanger__base(cx="50", cy="50", r="50")
                                     .Forecast__stats
                                         .Forecast__statsLabel--geomagnetic Geomagnetic Activity
-                                        .Forecast__statsValue--geomagnetic 2
+                                        .Forecast__statsValue--geomagnetic 4 / 2
                                     .Forecast__stats
                                         .Forecast__statsLabel--solar Solar Radiation Activity
                                         .Forecast__statsValue--solar 5%
