Solar cycle colors

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -24,6 +24,9 @@ $colorGeomagnetic = $colorMagnitude1
 $colorSolar = $colorMagnitude2
 $colorBlackout = $colorMagnitude3
 
+$colorParticle10 = $colorTitle
+$colorParticle100 = hsla(8, 80%, 60%, 1)
+
 $easeInCubic = cubic-bezier(0.550, 0.055, 0.675, 0.190)
 
 // ----------------------------------------------------------
