--- a/src/styles/graph.styl
+++ b/src/styles/graph.styl
@@ -25,3 +25,12 @@
         font-weight 200
         font-size .75rem
         stroke $colorBase
+
+.Graph__smoothed
+    stroke $colorMagnitude2
+
+.Graph__observed
+    stroke alpha($colorMagnitude2, 0.3)
+
+.Graph__predicted
+    stroke $colorTitle
