--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -453,6 +453,7 @@ p:first-line
 .Alert__extendedInfo
     max-height 0
     overflow hidden
+    padding-bottom 1rem
     transform translate3d(0,0,0)
     transition max-height .4s $easeInCubic
 
@@ -525,11 +526,32 @@ p:first-line
     align-items center
     margin-right 2rem
 
-.Graph__legendColor
+$Graph__legendColor
     width 1rem
     height .5rem
-    background-color $colorTitle
     margin-right .5rem
+
+.Graph__legendColor--particle10
+.Graph__legendColor--particle100
+.Graph__legendColor--monthly
+.Graph__legendColor--smoothedMonthly
+.Graph__legendColor--predictedMonthly
+    @extend $Graph__legendColor
+
+
+.Graph__legendColor--particle10
+    background-color $colorParticle10
+.Graph__legendColor--particle100
+    background-color $colorParticle100
+
+
+
+.Graph__legendColor--monthly
+    background-color alpha($colorMagnitude2, 0.3)
+.Graph__legendColor--smoothedMonthly
+    background-color $colorMagnitude2
+.Graph__legendColor--predictedMonthly
+    background-color $colorTitle
 
 .Graph__legendLabel
     font-size .875rem
