--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -18,6 +18,9 @@
 *:before
 *:after
     box-sizing border-box
+    user-select none
+    -webkit-user-select none
+    -moz-user-select none
 
 html
     width 100%
@@ -262,6 +265,7 @@ p:first-line
     width 100%
     //height 100%
 .Sun__container
+    display inline-block
     margin auto
     position relative
     background-color black
@@ -291,7 +295,7 @@ p:first-line
     width 100%
     height 100%
     border-radius 50%
-    box-shadow inset 0 0 6rem 2rem black
+    box-shadow inset 0 0 3rem 1rem black
     z-index 10
 
 // ----------------------------------------------------------
@@ -453,7 +457,7 @@ p:first-line
 .Alert__extendedInfo
     max-height 0
     overflow hidden
-    padding-bottom 1rem
+    margin-bottom 1rem
     transform translate3d(0,0,0)
     transition max-height .4s $easeInCubic
 
@@ -622,13 +626,20 @@ $Graph__legendColor
     flex 1
     display flex
     align-items stretch
-    margin 0 -.5rem
+    margin 0 -1rem
 .Forecast__day
     flex 1
     display flex
     flex-direction column
     align-items stretch
     padding 1rem 1rem 0
+
+.Forecast__dayLabel
+    text-transform uppercase
+    font-size 1.25rem
+    flex 0 0 auto
+    text-align left
+    color $colorHighlight
 
 .Forecast__dayData
     flex 1 0 auto
@@ -672,14 +683,6 @@ $RadialDanger__fill
     stroke-width 1px
     stroke black
 
-.Forecast__dayLabel
-    text-transform uppercase
-    font-size 1.25rem
-    flex 0 0 auto
-    margin-bottom 1rem
-    text-align left
-    color $colorHighlight
-
 .Forecast__stats
     margin-bottom .5rem
     padding .5rem 1rem
@@ -696,7 +699,7 @@ $RadialDanger__fill
 
 .Forecast__statsValue
     flex 0 0 30%
-    font-size 1.5rem
+    font-size 1.25rem
     text-align right
 
 .Forecast__statsLabel--geomagnetic
