sun position fixed

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -263,6 +263,10 @@ p:first-line
     left 0
     bottom 1rem
     width 100%
+    display flex
+    align-items center
+    justify-content center
+
     //height 100%
 .Sun__container
     display inline-block
