intense stardust mode, forecast fixed

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -82,10 +82,14 @@ p:first-line
     position relative
 
 .Page__top
-.Page__bottom
     flex 0 0 4rem
     display flex
     align-items flex-end
+
+.Page__bottom
+    flex 0 0 2rem
+    display flex
+    align-items center
 
 .Page__top
     position relative
