sunspots spotted and decor decorating

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -128,8 +128,8 @@ $Panel__header
 $Panel__decor
     position absolute
     content ''
-    width .25rem
-    height .25rem
+    width 5px
+    height 5px
     transform rotate(45deg)
     background-color $colorHighlight
     z-index 101
