--- a/src/styles/graph.styl
+++ b/src/styles/graph.styl
@@ -34,3 +34,12 @@
 
 .Graph__predicted
     stroke $colorTitle
+
+.Graph__sun
+    stroke alpha($colorMagnitude2, 0.3)
+
+.Graph__sunspot
+    stroke $colorBase
+    vector-effect non-scaling-stroke
+    stroke-width 1px
+    fill transparent
