--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -204,12 +204,12 @@ p:first-line
     @extend $Panel__header
     &:before
     &:after
-        top -2px
+        top -3px
         @extend $Panel__decor
     &:before
-        left 0
+        left -2px
     &:after
-        right 0
+        right -2px
 
 
 .Panel__title
@@ -240,11 +240,11 @@ p:first-line
     &:before
     &:after
         @extend $Panel__decor
-        bottom -1px
+        bottom -3px
     &:before
-        left 0
+        left -2px
     &:after
-        right 0
+        right -2px
 
 // ----------------------------------------------------------
 // Weather Section
