--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -277,7 +277,8 @@ p:first-line
     margin auto
     position relative
     background-color black
-    //border 1px solid $colorDim
+    // border 1px solid $colorDim
+    border-radius 50%
 .Sun__date
     position absolute
     right 0
@@ -303,7 +304,7 @@ p:first-line
     width 100%
     height 100%
     border-radius 50%
-    box-shadow inset 0 0 3rem 1rem black
+    box-shadow inset 0 0 4rem 2rem black
     z-index 10
 
 // ----------------------------------------------------------
