sunspots data panel created (but hidden) and corona text replaced

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -102,6 +102,11 @@ $Panel
     display flex
     flex-direction column
 
+$Panel--20
+    @extend $Panel
+    flex 0 1 20%
+    display flex
+
 $Panel--40
     @extend $Panel
     flex 0 1 40%
