--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -496,8 +496,10 @@ p:first-line
 
 .Sunspots__description
 .SolarCycle__description
-    flex 0 0 40%
-    padding 2rem
+    @extend $Panel--40
+
+.Sunspots__data
+    @extend $Panel--20
 
 .Text__header
     @extend $Text__header
