Added Solar Wind dots

--- a/src/styles/graph.styl
+++ b/src/styles/graph.styl
@@ -43,3 +43,14 @@
     vector-effect non-scaling-stroke
     stroke-width 1px
     fill transparent
+
+
+.Graph__dots
+    fill transparent
+
+.Graph__density
+    fill $colorTitle
+
+.Graph__temperature
+    fill $colorMagnitude2
+
