graph dots bigger

--- a/src/styles/graph.styl
+++ b/src/styles/graph.styl
@@ -36,15 +36,13 @@
     stroke $colorTitle
 
 .Graph__sun
-    stroke alpha($colorMagnitude2, 0.3)
     fill transparent
 
 .Graph__sunspot
-    stroke $colorBase
+    stroke $colorHighlight
     vector-effect non-scaling-stroke
     stroke-width 1px
     fill transparent
-
 
 .Graph__dots
     fill transparent
