--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -35,6 +35,9 @@ body
     margin 0
     padding 0
     //font-size .875rem
+    display flex
+    align-items center
+    justify-content center
 
 body
 label
@@ -75,6 +78,9 @@ p:first-line
 // Page layout
 
 .Page
+    max-width 1800px
+    max-height 1200px
+    width 100%
     height 100%
     display flex
     flex-direction column
