Solar cycle and sunspots texts

--- a/src/styles/base.styl
+++ b/src/styles/base.styl
@@ -40,6 +40,7 @@ $Metadata
 $Alert
     position relative
     padding .5rem 1rem
+    flex 0 0 auto
 //  border-left 1px solid $colorAlert
 
 $Alert__decor
