--- a/src/styles/graph.styl
+++ b/src/styles/graph.styl
@@ -3,12 +3,19 @@
     bottom 0
     left 0
 
-.Graph__line
+.Graph__line.Graph__color0
     fill transparent
-    stroke $colorTitle
+    stroke $colorParticle10
 
-.Graph__area
-    fill alpha($colorTitle, 0.06)
+.Graph__line.Graph__color1
+    fill transparent
+    stroke $colorParticle100
+
+.Graph__area.Graph__color0
+    fill alpha($colorParticle10, 0.06)
+
+.Graph__area.Graph__color1
+    fill alpha($colorParticle100, 0.06)
 
 .Graph__axis
     fill transparent
