--- a/src/styles/graph.styl
+++ b/src/styles/graph.styl
@@ -3,6 +3,11 @@
     bottom 0
     left 0
 
+.Graph__line
+    fill transparent
+    stroke $colorParticle10
+
+// TODO: Fix this.
 .Graph__line.Graph__color0
     fill transparent
     stroke $colorParticle10
@@ -11,6 +16,10 @@
     fill transparent
     stroke $colorParticle100
 
+.Graph__area
+    fill alpha($colorParticle10, 0.06)
+
+// TODO: Fix this.
 .Graph__area.Graph__color0
     fill alpha($colorParticle10, 0.06)
 
