solar radiation two values

--- a/src/styles/index.styl
+++ b/src/styles/index.styl
@@ -747,7 +747,7 @@ $RadialDanger__fill
     font-size .75rem
 
 .Forecast__statsValue
-    flex 0 0 30%
+    flex 0 0 40%
     font-size 1.25rem
     text-align right
 
@@ -760,6 +760,9 @@ $RadialDanger__fill
 .Forecast__statsValue--solar
 .Forecast__statsValue--blackout
     @extend .Forecast__statsValue
+
+.Forecast__statsValue--solar
+    font-size 1rem
 
 .Forecast__statsLabel--geomagnetic
 .Forecast__statsValue--geomagnetic
