--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -177,7 +177,9 @@ block content
                                         .Forecast__statsValue--geomagnetic 8 / 2
                                     .Forecast__stats
                                         .Forecast__statsLabel--solar Solar Radiation Activity
-                                        .Forecast__statsValue--solar 5%
+                                        .Forecast__statsValue--solar
+                                            .Forecast__statsSubValue R1-R2 5%
+                                            .Forecast__statsSubValue R3 15%
                                     .Forecast__stats
                                         .Forecast__statsLabel--blackout Radio Blackout Activity
                                         .Forecast__statsValue--blackout 10%
@@ -206,7 +208,9 @@ block content
                                         .Forecast__statsValue--geomagnetic 2 / 2
                                     .Forecast__stats
                                         .Forecast__statsLabel--solar Solar Radiation Activity
-                                        .Forecast__statsValue--solar 5%
+                                        .Forecast__statsValue--solar
+                                            .Forecast__statsSubValue R1-R2 5%
+                                            .Forecast__statsSubValue R3 15%
                                     .Forecast__stats
                                         .Forecast__statsLabel--blackout Radio Blackout Activity
                                         .Forecast__statsValue--blackout 10%
@@ -235,7 +239,9 @@ block content
                                         .Forecast__statsValue--geomagnetic 4 / 2
                                     .Forecast__stats
                                         .Forecast__statsLabel--solar Solar Radiation Activity
-                                        .Forecast__statsValue--solar 5%
+                                        .Forecast__statsValue--solar
+                                            .Forecast__statsSubValue R1-R2 5%
+                                            .Forecast__statsSubValue R3 15%
                                     .Forecast__stats
                                         .Forecast__statsLabel--blackout Radio Blackout Activity
                                         .Forecast__statsValue--blackout 10%
